Fix collapsed details styles

--- a/src/components/canvas/member/member-info/details/contacts/contacts.scss
+++ b/src/components/canvas/member/member-info/details/contacts/contacts.scss
@@ -11,7 +11,7 @@
     height: 0;
   }
 
-  a {
+  &__link {
     display: inline-block;
     margin-right: 5px;
     @include transition(margin);
