--- a/src/components/canvas/member/member-info/details/details.scss
+++ b/src/components/canvas/member/member-info/details/details.scss
@@ -11,12 +11,13 @@
   padding: 10px 10px 0 20px;
   margin-left: 20px;
   border-left: 1px solid $light-grey-color;
-  @include transition(padding, opacity, margin);
+  @include transition(padding, opacity, margin, border-width);
 
   &_collapsed {
     padding: 0;
     margin: 0;
     opacity: 0;
+    border-width: 0;
   }
 
   &__item {
